# JniOpencvDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xiaoyunchengzhu/jniopencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/header/: basefunction.h  eroding_and_dilating.h  filter.h  morphologyex.h  opencv_jni_util.h  smoothing.h
app/src/main/cpp/source/: basefunction.cpp  eroding_and_dilating.cpp  filter.cpp  morphologyex.cpp  opencv_jni_util.cpp  smoothing.cpp
app/src/main/java/com/xiaoyunchengzhu/jniopencvdemo/: ImgBaseActivity.java  ImgProcActivity.java  MainActivity.java  PermissionsChecker.java  SplashActivity.java
app/src/main/java/com/xiaoyunchengzhu/jniopencvdemo/imgutil/: ImgConvert.java
app/src/main/java/com/xiaoyunchengzhu/jniopencvdemo/module/: LightnessActivity.java  PlusActivity.java  SharpenActivity.java  SmoothingActivity.java
app/src/main/java/com/xiaoyunchengzhu/jniopencvdemo/module/base/: LightnessActivity.java  PlusActivity.java  SharpenActivity.java
app/src/main/java/com/xiaoyunchengzhu/jniopencvdemo/module/imgproc/: ErodingAndDilatingActivity.java  MorphologyExActivity.java  SmoothingActivity.java
app/src/main/java/com/xiaoyunchengzhu/jniopencvdemo/opencvutil/: Basefunction.java  ErodingAndDilating.java  Filter.java  ImgProcErodingAndDilating.java  ImgProcSmoothing.java  ImgprocMorphologyEx.java  Smoothing.java
app/src/main/res/layout/: activity_eroding_and_dilating.xml  activity_img_base.xml  activity_img_proc.xml  activity_lightness.xml  activity_main.xml  activity_morphology_ex.xml  activity_plus.xml  activity_sharpen.xml  activity_smoothing.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/test/java/com/xiaoyunchengzhu/jniopencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
